[tool.poetry]
name = "milotools"
version = "0.10.0"
description = "Utility functions"
authors = ["Miles Smith <miles-smith@omrf.org>"]
license = "GPL-3.0"
readme = "README.rst"
homepage = "https://github.com/milescsmith/milotools"
repository = "https://github.com/milescsmith/milotools"
documentation = "https://plotting-utils.readthedocs.io"
classifiers = [
    "Development Status :: 4 - Beta",
]

[tool.poetry.urls]
Changelog = "https://github.com/milescsmith/milotools/releases"

[tool.poetry.dependencies]
python = ">=3.8.3,<3.11"
pandas = "^1.4.3"
numpy = "^1.24.1"
seaborn = ">=0.11.2"
scipy = "^1.7.3"
statsmodels = "^0.13.1"
joblib = "^1.1.0"
muon = "^0.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = {extras = ["toml"], version = "^6.1"}
safety = "^1.10.3"
mypy = "^0.961"
typeguard = "^2.13.0"
xdoctest = {extras = ["colors"], version = "^0.15.10"}
sphinx = "^5.0.2"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^2.15.0"
flake8 = "^4.0.1"
black = "^21.10b0"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^22.1.11"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.4"
pep8-naming = "^0.12.1"
darglint = "^1.8.1"
reorder-python-imports = "^2.6.0"
pre-commit-hooks = "^4.0.1"
sphinx-rtd-theme = "^1.0.0"
sphinx-click = "^4.3.0"
Pygments = "^2.10.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["milotools"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
